# tagged_ptr

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: tagged_ptrConfig.cmake.in
include/: flag_ptr.h
include/flag_ptr/: flag_ptr.h  flag_ptr.hpp
include/tagged_ptr/: tagged_ptr.hpp
tests/: CMakeLists.txt  tests.cpp
